[package]
name = "swerve_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.3.5"
ros2_rust_util = {git = "https://github.com/TakanoTaiga/ros2_rust_util.git"}

[package.metadata.ros]
safe_drive_version = "0.3.5"